methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:7: error: not found: value foward
      foward(7)
      ^